@@ -35,6 +35,7 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2006-02-17 DP  1.4.2  Properly escape single quotes in connection strings.
 2006-02-08 DP  1.4.2  Re-arrange the Win32 dependencies so that iconv, libxml2
                       and wxwidgets are located in $PGADIR/../pgadmin3-deps/
 2006-02-08 MH  1.6.0  Add a 'Favourites' query organiser to the Query Tool.
